[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pymot"
authors = [{name = "Simas Sirutavicius", email = "sirutavicius.simas@gmail.com"}]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "numpy >=1.22.0",
    "scipy >=1.8.0",
]

[project.urls]
Source = "https://github.com/simsiru/pymot"